mejorando la estructura de las páginas, añadiendo nuevos elementos

--- a/subpaginas/tos.html
+++ b/subpaginas/tos.html
@@ -4,8 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>T.O.S</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Esta es la pagina de terminos y condiciones</h1>
+    <div class="container-card">
+        <section class="aside-left">
+            <aside>
+                <div class="perfil-descripcion">
+                    <div class="perfil">
+                        <img class="img-perfil" src="/punichibi1.png" alt="punichibi">
+                    </div>
+                    <div class="descripcion">
+                        <div class="texto">
+                            <h2>Griyo</h2>
+                            <h4>|Cómic Style(? | Vzl | •Reiji y Loki•|</h4>
+                            <h6>@grisyett</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="redes">
+                    <div class="title-contact">
+                        <p>Redes</p>
+                        <img src="/lupa.png" class="lupapng">
+                    </div>
+                    <div class="redes-links">
+                        <ul>
+                            <li class="red-link">Youtube</li>
+                            <li class="red-link">Tiktok</li>
+                            <li class="red-link">Ko-fi</li>
+                            <li class="red-link">Vgen</li>
+                        </ul>
+                        <button><a href="/index.html">Regresar</a></button>
+                    </div>
+                </div>
+            </aside>
+        </section>
+        <main class="contenido">
+            
+        </main>
+    </div>
 </body>
 </html>
